# ai-voice-agent

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260514_220000_a1b2c3d4e5f6_initial_schema.py
docs/: architecture.md  design.md
services/api/: Dockerfile
services/api/src/api/: broker.py  config.py  main.py
services/api/src/api/agent/: prompts.py
services/api/src/api/auth/: call_session.py
services/api/src/api/db/: opensearch_store.py  redis_client.py  session.py
services/api/src/api/routes/: admin.py  agent.py  artifacts.py  call_status.py  calls.py  health.py  recording.py  transcript.py
services/worker/: Dockerfile
services/worker/src/worker/: broker.py  config.py  main.py  scheduler.py
services/worker/src/worker/db/: session.py
shared/db_models/: __init__.py  base.py  call.py  knowledge.py
shared/deepgram/: __init__.py  client.py  settings_builder.py
shared/discord/: webhook.py
shared/guardrails/: client_ip.py  cost_ceiling.py  proxy.py  rate_limit.py  turnstile.py
shared/indexing/: __init__.py  page_extractor.py  page_parser.py  pipeline.py
shared/pdf/: summary_pdf.py  summary_template.html  synthesize.py
shared/tasks/: __init__.py  cleanup.py  discord_notify.py  generate_pdf.py  ingest_knowledge.py
web/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Header.tsx  Orb.tsx  Transcript.tsx  Waveform.tsx
web/src/lib/: api.ts  recorder.ts  turnstile.ts  voice-agent.ts
