[project]
name = "voicegen"
version = "0.1.0"
description = "VoiceGen AI — voice customer-support agent for Moazzam's freelancing. ElevenLabs Conversational AI + custom RAG over portfolio docs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # === API service (FastAPI) ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",

    # === Persistence ===
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",

    # === Search (knowledge base side, same stack as DocuAI) ===
    "opensearch-py>=2.4.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.4.0",

    # === Document parsing (vision-LLM page extraction of knowledge PDFs) ===
    "pymupdf>=1.24.0",
    "openai>=1.0.0",
    "instructor>=1.0.0",

    # === Worker (Dramatiq) ===
    "dramatiq[redis]>=1.17.0",
    "apscheduler>=3.10.0",

    # === PDF generation (call summary artifact) ===
    "weasyprint>=63.0",
    "jinja2>=3.1.0",

    # === Shared utilities ===
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

# Same CPU-only torch trick as DocuAI: default torch wheels pull ~2GB of CUDA
# libs we never use. We run sentence-transformers on CPU.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "*.egg-info",
    "build",
    "dist",
    "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["api", "worker", "shared"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["services/api/tests", "services/worker/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]
